Bug 115620 - Performing of a Find Text operation Switches the Object Type of the “Navigate By” Drop-down Menu to “Repeat Search”
Summary: Performing of a Find Text operation Switches the Object Type of the “Navigate...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords:
: 96494 (view as bug list)
Depends on:
Blocks: Find-Toolbar
  Show dependency treegraph
 
Reported: 2018-02-10 22:49 UTC by Harald Koester
Modified: 2018-12-03 21:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2018-02-10 22:49:08 UTC
If you perform a normal find text operation, the object type of the "Navigate by" drop-down menu is switched to "Repeat search". This is a bit awkward, if you always have to switch back to the original object type. In order to reproduce the bug:

[1] Create a new text document with some headings.
[2] Display toolbar “Find”.
[3] In this toolbar in the “Navigate By” drop-down menu select “Headings”.
[4] Navigate through the headings with arrow buttons.
[5] Insert a text string in the “Find Text” drop-down menu. Then Return. In the “Navigate By” drop-down menu the object type changes to “Repeat Search”. Expected: No change of object type.

To my opinion the item "Repeat search" can be omitted in the “Navigate by” menu, because all searches can be done with the “Find Text” drop-down menu.
Comment 1 Jim Raykowski 2018-02-13 21:56:13 UTC
Hi Harald, 

Here is a patch to prevent the "Navigate by" from being changed when a find text operation is done:  

https://gerrit.libreoffice.org/#/c/49690/
Comment 2 Commit Notification 2018-02-14 04:13:04 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb975197b62204062393979e33438a3a4e2d27c1

tdf#115620 Prevent "Find Text" changing "Navigate By"

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2018-02-14 09:29:14 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=106f66e921da871c26ce6b642f9f67024417b93d&h=libreoffice-6-0

tdf#115620 Prevent "Find Text" changing "Navigate By"

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Harald Koester 2018-03-15 22:10:06 UTC
Hi Jim,

checked with version 6.0.2. It's OK now. Thanks for fixing.
Comment 5 Harald Koester 2018-12-03 21:38:39 UTC
*** Bug 96494 has been marked as a duplicate of this bug. ***