tdf#115620 Prevent "Find Text" changing "Navigate By"

Change-Id: I46ab436e98f0d24e51277f22b2a707dfd5e2937c